--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -1,10 +1,49 @@
-<ul>
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+	<title></title>
+	<link rel="stylesheet" href="/estilo.css" type="text/css">
+</head>
+
+<body> 
+   
+   <div  class="container">
+
+   	
+        <ul>
+
 	<% @bookmarks.each do |bookmark| %>
 
-		<li>
-		<a href="<%= bookmark.url %>">
+		<li  class="bookmark" id="bookmark-<%=bookmark.id %>">
+
+		<a href="<%= bookmark.url %>" target="_blank">
 			<%= bookmark.title %>
 		</a>
+
+		<form action="/bookmarks/<%= bookmark.id %>" method="post">
+			<input type="hidden" name="_method" value="DELETE" />
+			<input type="submit" value="Delete" />
+		</form>
+
+		<form action="/bookmarks/<%= bookmark.id %>/edit" method="get" >
+			<input type="submit" value="Edit" />	
+		</form>
+
 	</li>
+
 	<% end %>
+
 </ul>
+     
+
+	
+
+</body>
+
+</html>
+	
