--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -14,6 +14,11 @@
    
    <div  class="container">
 
+   	<h1>
+	<%= flash[:notice] %>
+	
+</h1>
+
    	
         <ul>
 
@@ -39,6 +44,11 @@
 	<% end %>
 
 </ul>
+
+
+	
+
+
      
 
 	
