--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -39,11 +39,26 @@
 			<input type="submit" value="Edit" />	
 		</form>
 
+		<form action="/bookmarks/<%= bookmark.id %>/comments/new" method="get">
+			<input type="submit" value="Add Comment" />
+		</form>
+
+		<ul>
+			 <% bookmark.comments.each do |comment| %>
+			 <li>
+			 	<%= comment.text %>
+			 </li>
+
+			 <% end %>
+
+		</ul>
+
 	</li>
 
 	<% end %>
 
 </ul>
+
 
 
 	
