Exercise Making a Many-to-Many relationship--- creating the file bookmark_tag.rb, tag.rb, tag_spec.rb, tagging_bookmarks_spec.rb, tag_spec.rb, view/tags for the table new called bookmarks-tags and the table tag--- and edit the file app.rb for add new route and the file queries , and bookmark.rb for add other method called tags and the file bookmark_spec.rb for add other method called #tags and edit detup_test_databse.rb and index.erb

--- a/views/bookmarks/index.erb
+++ b/views/bookmarks/index.erb
@@ -43,21 +43,43 @@
 			<input type="submit" value="Add Comment" />
 		</form>
 
-		<ul>
-			 <% bookmark.comments.each do |comment| %>
-			 <li>
-			 	<%= comment.text %>
-			 </li>
+		<form action="/bookmarks/<%= bookmark.id %>/tags/new" method="get">
+        <input type="submit" value="Add Tag" />
+        </form>
 
-			 <% end %>
+      <div>
 
-		</ul>
+        <h2>Comments</h2>
 
-	</li>
+        <ul>
 
-	<% end %>
+          <% bookmark.comments.each do |comment| %>
+            <li><%= comment.text %></li>
+          <% end %>
 
-</ul>
+        </ul>
+
+      </div>
+
+      <div>
+
+        <h2>Tags</h2>
+
+        <ul>
+
+          <% bookmark.tags.each do |tag| %>
+            <li><%= tag.content %></li>
+
+          <% end %>
+
+        </ul>
+
+      </div>
+
+    </li>
+
+  <% end %>
+
 
 
 
